# x402-solana

./: Anchor.toml  CLAUDE.md  README.md  package.json  usdc-mint.json
programs/xusdc/: Cargo.toml
programs/xusdc/src/: error.rs  lib.rs
programs/xusdc/src/ixs/: contribute_rent.rs  deposit.rs  garbage_collect.rs  initialize.rs  mod.rs  settle_payment.rs  withdraw.rs  withdraw_rent.rs
programs/xusdc/src/state/: contributor.rs  mod.rs  nonce.rs
programs/xusdc/src/tests/: initialize_tests.rs  mod.rs
tests/: settle_payment.ts  simple_settle_payment_test.ts  xusdc.ts
tests/utils/: index.ts
