[package]
name = "xusdc"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "xusdc"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
devnet = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]


[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
brine-ed25519 = "0.1.0"

[dev-dependencies]
litesvm = "0.6.1"
litesvm-token = { version = "0.6.1", features = ["token-2022"] }
solana-sdk = "2.2"
serde_json = "1.0"
base64 = "0.21.0"

